# ViHillCorner

./: .flake8  .gitignore  AnimeList.json  README.md  birthdaylist.json  customroles.json  intros.json  keep_alive.py  main.py  mainbank.json  marry-data.json  nsfw-blocks.json  pyproject.toml  repeated-text-filter.json  requirements.txt  snippets.json  spam-filter.json  spam-warns.json  tags.json  words-warns.json
cogs/: actions.py  ad.py  anime.py  attachments-only.py  attachments_only.py  ban-appeal.py  ban_appeal.py  bdsm.py  birthday.py  botinfo.py  calc.py  calculator.py  caps-filter.py  cat.py  commands.py  confesscord.py  cr.py  dev.py  dog.py  eco.py  error-handler.py  error_handler.py  fun.py  general.py  global-error-handler.py  google.py  help.py  info.py  intro.py  invite-filter.py  levels.py  logs.py  marry.py  meme.py  messages.py  metrics.py  misc.py  moderator.py  msg-top.py  name-filter.py  (+40 more)
cogs/__pycache__/: help.cpython-39.pyc.1741498162096
deprecated/: starboard.py
docs/: __init__.py  _batch_parser.py  _cog.py  _converters.py  _function.py  _lock.py  _messages.py  _pagination.py  _parsing.py  batch_parser.py  cache.py  cog.py  converters.py  messages.py  pagination.py  utils.py
games/: Fight.py  TicTacToe.py  Trivia.py  TypeRacer.py  __init__.py
outsidereloadcogs/: all.py
reload_cogs/: gen.py
utils/: ButtonRoles.py  CommandButtonRoles.py  HelpCommand.py  calculator.py  colors.py  context.py  database.py  embedlinks.py  fuzzy.py  games.py  hangman_words.txt  helpers.py  hljs.py  menus.py  pag.py  paginator.py  paginator_v2.py  paginator_v3.py  time.py  topicslist.py
(+19 files in other folders)
