[tool.poetry]
name = "vihill-corner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
jishaku = "^1.19.2"
flask = "^1.1.2"
psutil = "^5.7.3"
humanize = "^3.1.0"
parsedatetime = "^2.6"
wolframalpha = "^4.1.1"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
"discord.py" = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
